Update chain ID format
The chain ID is now formatted internally as a `0x`-prefixed hex string.
This was chosen as the internal format for these reasons:
* It allows arbitrarily large chain IDs, unlike `number`
* It can be validated at runtime, unlike decimal strings
* It can be disambiguated from decimal strings and numbers at compile-
time using the `Hex` type, unlike decimal strings
* It is serializable as JSON, unlike BigInt

However, to improve readability we will use the `toHex` helper function
rather than string literals, letting us read chain IDs in the source
code as decimal numbers or strings.

Closes #1209

--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -34,6 +34,7 @@
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/network-controller": "workspace:^",
+    "@metamask/utils": "^5.0.2",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-method-registry": "1.1.0",
