--- a/packages/address-book-controller/package.json
+++ b/packages/address-book-controller/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^"
+    "@metamask/controller-utils": "workspace:^",
+    "@metamask/utils": "^5.0.2"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
