--- a/packages/gas-fee-controller/package.json
+++ b/packages/gas-fee-controller/package.json
@@ -32,6 +32,7 @@
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/network-controller": "workspace:^",
+    "@metamask/utils": "^5.0.2",
     "@types/uuid": "^8.3.0",
     "babel-runtime": "^6.26.0",
     "eth-query": "^2.1.2",
