Temporarily disable npm publish Slack notifications
Slack notifications of release review requests have been temporarily
disabled. They will be re-enabled after that action has been updated to
ensure those notifications don't include a group mention for the whole
team.

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -50,8 +50,9 @@ jobs:
       - name: Dry Run Publish
         # omit npm-token token to perform dry run publish
         uses: MetaMask/action-npm-publish@v3
-        with:
-          slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+        # Temporarily disabled
+        # with:
+        #   slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
         env:
           SKIP_PREPACK: true
 
