--- a/packages/ens-controller/package.json
+++ b/packages/ens-controller/package.json
@@ -32,6 +32,7 @@
     "@ethersproject/providers": "^5.7.0",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
+    "@metamask/network-controller": "workspace:^",
     "@metamask/utils": "^5.0.2",
     "ethereum-ens-network-map": "^1.0.2",
     "punycode": "^2.1.1"
@@ -45,6 +46,9 @@
     "typedoc": "^0.22.15",
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
+  },
+  "peerDependencies": {
+    "@metamask/network-controller": "workspace:^"
   },
   "engines": {
     "node": ">=16.0.0"
