--- a/packages/ens-controller/tsconfig.json
+++ b/packages/ens-controller/tsconfig.json
@@ -5,7 +5,8 @@
   },
   "references": [
     { "path": "../base-controller" },
-    { "path": "../controller-utils" }
+    { "path": "../controller-utils" },
+    { "path": "../network-controller" }
   ],
   "include": ["../../types", "./src"]
 }
