--- a/packages/base-controller/package.json
+++ b/packages/base-controller/package.json
@@ -29,7 +29,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/utils": "^5.0.2",
     "immer": "^9.0.6"
   },
   "devDependencies": {
