--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -31,6 +31,9 @@
       "path": "./packages/keyring-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/logging-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/message-manager/tsconfig.build.json"
     },
     {
