--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -56,6 +56,9 @@
     },
     {
       "path": "./packages/transaction-controller/tsconfig.build.json"
+    },
+    {
+      "path": "./packages/mmi-controller/tsconfig.build.json"
     }
   ],
   "files": [],
