--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -36,11 +36,13 @@
     "@metamask/utils": "^5.0.2",
     "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
-    "immer": "^9.0.6"
+    "immer": "^9.0.6",
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^27.4.1",
+    "@types/lodash.clonedeep": "^4.5.7",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
