--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,3 +2,5 @@
 # Each line is a file pattern followed by one or more owners.
 
 *                                    @MetaMask/devs
+
+/packages/permission-controller      @MetaMask/snaps-devs
