Add snaps codeowners for the permission, notifications and rate-limit controllers  (#1389)
* add snaps codeowners for permission controller

* add some additional controllers

* Add newline

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,3 +2,7 @@
 # Each line is a file pattern followed by one or more owners.
 
 *                                    @MetaMask/devs
+
+/packages/permission-controller      @MetaMask/snaps-devs
+/packages/notification-controller    @MetaMask/snaps-devs
+/packages/rate-limit-controller      @MetaMask/snaps-devs
