--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -48,6 +48,9 @@
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
   },
+  "peerDependencies": {
+    "@metamask/approval-controller": "workspace:^"
+  },
   "engines": {
     "node": ">=16.0.0"
   },
