--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -29,6 +29,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@ethersproject/address": "^5.7.0",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
@@ -40,13 +41,13 @@
     "@metamask/metamask-eth-abis": "3.0.0",
     "@metamask/network-controller": "workspace:^",
     "@metamask/preferences-controller": "workspace:^",
+    "@metamask/rpc-errors": "^5.1.1",
     "@metamask/utils": "^5.0.2",
     "@types/uuid": "^8.3.0",
     "abort-controller": "^3.0.0",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
     "eth-query": "^2.1.2",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
     "multiformats": "^9.5.2",
