--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -38,7 +38,8 @@
     "@metamask/preferences-controller": "workspace:^",
     "async-mutex": "^0.2.6",
     "ethereumjs-util": "^7.0.10",
-    "ethereumjs-wallet": "^1.0.1"
+    "ethereumjs-wallet": "^1.0.1",
+    "immer": "^9.0.6"
   },
   "devDependencies": {
     "@ethereumjs/common": "^2.6.1",
