--- a/packages/approval-controller/package.json
+++ b/packages/approval-controller/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
+    "@metamask/utils": "^5.0.2",
     "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31"
