--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -32,7 +32,7 @@
     "@keystonehq/metamask-airgapped-keyring": "^0.13.1",
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
-    "@metamask/eth-keyring-controller": "^10.0.1",
+    "@metamask/eth-keyring-controller": "^11.0.0",
     "@metamask/eth-sig-util": "^6.0.0",
     "@metamask/message-manager": "workspace:^",
     "@metamask/preferences-controller": "workspace:^",
@@ -47,6 +47,7 @@
     "@keystonehq/bc-ur-registry-eth": "^0.9.0",
     "@metamask/auto-changelog": "^3.1.0",
     "@metamask/scure-bip39": "^2.1.0",
+    "@metamask/utils": "^6.1.0",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
