Improve error message when cache fails during release
A cache miss during the release workflow guarantees that the release
will fail. The cache has the build; without it, we have nothing to
release.

The release workflows have been updated to fail on cache miss during
the release workflow, ensuring that we spend less time diagnosing what
failed in this scenario. We can proceed directly to retrying to
workflow if this happens.

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -47,6 +47,7 @@ jobs:
             ./packages/**/dist
             ./node_modules/.yarn-state.yml
           key: ${{ github.sha }}
+          fail-on-cache-miss: true
       - name: Dry Run Publish
         # omit npm-token token to perform dry run publish
         uses: MetaMask/action-npm-publish@v4
@@ -70,6 +71,7 @@ jobs:
             ./packages/**/dist
             ./node_modules/.yarn-state.yml
           key: ${{ github.sha }}
+          fail-on-cache-miss: true
       - name: Publish
         uses: MetaMask/action-npm-publish@v3
         with:
