--- a/packages/message-manager/package.json
+++ b/packages/message-manager/package.json
@@ -49,6 +49,9 @@
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "~4.6.3"
   },
+  "peerDependencies": {
+    "@metamask/approval-controller": "workspace:^"
+  },
   "engines": {
     "node": ">=16.0.0"
   },
