--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -75,8 +75,8 @@ jobs:
             exit 1
           fi
 
-  build:
-    name: Build
+  build-source:
+    name: Build source
     runs-on: ubuntu-latest
     needs: prepare
     strategy:
@@ -90,7 +90,31 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn --immutable
-      - run: yarn build
+      - run: yarn build:source
+      - name: Require clean working directory
+        shell: bash
+        run: |
+          if ! git diff --exit-code; then
+            echo "Working tree dirty at end of job"
+            exit 1
+          fi
+
+  build-types:
+    name: Build types
+    runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      matrix:
+        node-version: [20.x]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - run: yarn --immutable
+      - run: yarn build:types
       - name: Require clean working directory
         shell: bash
         run: |
