--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - id: is-release
         uses: MetaMask/action-is-release@v1
         with:
-          commit-starts-with: 'Release [version]'
+          commit-starts-with: 'Release [version],Release/[version]'
 
   publish-release:
     name: Publish release
