Extract `mockNetwork` from tests
Mocking JSON-RPC requests in tests is somewhat inconvenient due to
needing to spell out the full path for an Infura endpoint and specify
full JSON-RPC request and response objects, but to make this easier,
we've written a small wrapper around Nock. Currently we use this in one
test within the `network-controller` package, but we plan to use this in
a different package, so this commit extracts the class responsible for
doing this. This also makes a small improvement to the API and adds a
function that makes the class even easier to use.

--- a/package.json
+++ b/package.json
@@ -79,5 +79,9 @@
       "ethereumjs-util>ethereum-cryptography>secp256k1": true,
       "simple-git-hooks": false
     }
+  },
+  "devDependencies": {
+    "@metamask/utils": "^6.2.0",
+    "nock": "^13.3.2"
   }
 }
