Update root manifest: 'dependencies' -> 'devDependencies'
None of the dependencies specified at the root are required to install
any of the packages within the monorepo; they purely exist for
development purposes. So moving them to `devDependencies` communicates
their intended usage better.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "simple-git-hooks": {
     "pre-push": "yarn lint"
   },
-  "dependencies": {
+  "devDependencies": {
     "@lavamoat/allow-scripts": "^2.3.1",
     "@metamask/create-release-branch": "^1.0.1",
     "@metamask/eslint-config": "^12.0.0",
