--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -31,11 +31,10 @@
   "dependencies": {
     "@keystonehq/metamask-airgapped-keyring": "^0.13.1",
     "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
-    "@metamask/eth-keyring-controller": "^10.0.1",
-    "@metamask/eth-sig-util": "^6.0.0",
+    "@metamask/eth-keyring-controller": "^13.0.0",
     "@metamask/message-manager": "workspace:^",
     "@metamask/preferences-controller": "workspace:^",
+    "@metamask/utils": "^6.2.0",
     "async-mutex": "^0.2.6",
     "ethereumjs-util": "^7.0.10",
     "ethereumjs-wallet": "^1.0.1",
@@ -46,6 +45,7 @@
     "@ethereumjs/tx": "^4.2.0",
     "@keystonehq/bc-ur-registry-eth": "^0.9.0",
     "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/eth-sig-util": "^6.0.0",
     "@metamask/scure-bip39": "^2.1.0",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
