--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -34,11 +34,11 @@
     "@metamask/eth-json-rpc-infura": "^8.1.1",
     "@metamask/eth-json-rpc-middleware": "^11.0.0",
     "@metamask/eth-json-rpc-provider": "^1.0.0",
+    "@metamask/eth-query": "^3.0.1",
     "@metamask/swappable-obj-proxy": "^2.1.0",
     "@metamask/utils": "^6.2.0",
     "async-mutex": "^0.2.6",
     "eth-block-tracker": "^7.0.1",
-    "eth-query": "^2.1.2",
     "eth-rpc-errors": "^4.0.2",
     "immer": "^9.0.6",
     "json-rpc-engine": "^6.1.0",
