--- a/packages/controller-utils/package.json
+++ b/packages/controller-utils/package.json
@@ -29,10 +29,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/eth-query": "^3.0.1",
     "@metamask/utils": "^6.2.0",
     "@spruceid/siwe-parser": "1.1.3",
     "eth-ens-namehash": "^2.0.8",
-    "eth-query": "^2.1.2",
     "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "ethjs-unit": "^0.1.6",
