Fix no-floating-promises lint violations
When our ESLint packages were updated, one of the rules that got enabled
was `no-floating-promises`, which is violated if a promise is not
properly awaited. To minimize alignment changes, this rule was
overridden at the time to produce a warning rather than an error.

This commit corrects code that violates `no-floating-promises` by either
awaiting promises where it is possible to do so, or by using a new
utility function, `logRejection`, to allow the promise to continue
unawaited while logging any possible rejections. This allows us to
remove the ESLint override.

--- a/packages/keyring-controller/package.json
+++ b/packages/keyring-controller/package.json
@@ -45,6 +45,7 @@
     "@ethereumjs/tx": "^4.2.0",
     "@keystonehq/bc-ur-registry-eth": "^0.9.0",
     "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/controller-utils": "workspace:^",
     "@metamask/eth-sig-util": "^6.0.0",
     "@metamask/scure-bip39": "^2.1.0",
     "@types/jest": "^27.4.1",
