--- a/packages/approval-controller/package.json
+++ b/packages/approval-controller/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/controller-utils": "workspace:^",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
