--- a/packages/address-book-controller/package.json
+++ b/packages/address-book-controller/package.json
@@ -29,8 +29,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1",
     "@metamask/utils": "^6.2.0"
   },
   "devDependencies": {
