--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -34,14 +34,14 @@
     "@ethersproject/contracts": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@metamask/abi-utils": "^2.0.1",
-    "@metamask/approval-controller": "workspace:^",
-    "@metamask/base-controller": "workspace:^",
+    "@metamask/approval-controller": "^3.5.0",
+    "@metamask/base-controller": "^3.2.0",
     "@metamask/contract-metadata": "^2.3.1",
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/controller-utils": "^4.3.1",
     "@metamask/eth-query": "^3.0.1",
     "@metamask/metamask-eth-abis": "3.0.0",
-    "@metamask/network-controller": "workspace:^",
-    "@metamask/preferences-controller": "workspace:^",
+    "@metamask/network-controller": "^12.1.1",
+    "@metamask/preferences-controller": "^4.3.0",
     "@metamask/rpc-errors": "^5.1.1",
     "@metamask/utils": "^6.2.0",
     "@types/uuid": "^8.3.0",
@@ -69,9 +69,9 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/approval-controller": "workspace:^",
-    "@metamask/network-controller": "workspace:^",
-    "@metamask/preferences-controller": "workspace:^"
+    "@metamask/approval-controller": "^3.5.0",
+    "@metamask/network-controller": "^12.1.1",
+    "@metamask/preferences-controller": "^4.3.0"
   },
   "engines": {
     "node": ">=16.0.0"
