--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -29,10 +29,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/approval-controller": "workspace:^",
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
-    "@metamask/message-manager": "workspace:^",
+    "@metamask/approval-controller": "^3.5.0",
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1",
+    "@metamask/message-manager": "^7.3.0",
     "@metamask/utils": "^6.2.0",
     "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
@@ -50,7 +50,7 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/approval-controller": "workspace:^"
+    "@metamask/approval-controller": "^3.5.0"
   },
   "engines": {
     "node": ">=16.0.0"
