--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -31,11 +31,11 @@
   "dependencies": {
     "@ethereumjs/common": "^3.2.0",
     "@ethereumjs/tx": "^4.2.0",
-    "@metamask/approval-controller": "workspace:^",
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/approval-controller": "^3.5.0",
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1",
     "@metamask/eth-query": "^3.0.1",
-    "@metamask/network-controller": "workspace:^",
+    "@metamask/network-controller": "^12.1.1",
     "@metamask/utils": "^6.2.0",
     "async-mutex": "^0.2.6",
     "eth-method-registry": "1.1.0",
@@ -59,8 +59,8 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/approval-controller": "workspace:^",
-    "@metamask/network-controller": "workspace:^",
+    "@metamask/approval-controller": "^3.5.0",
+    "@metamask/network-controller": "^12.1.1",
     "babel-runtime": "^6.26.0"
   },
   "engines": {
