Use block tracker to poll incoming transactions

--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -35,8 +35,10 @@
     "@metamask/base-controller": "workspace:^",
     "@metamask/controller-utils": "workspace:^",
     "@metamask/network-controller": "workspace:^",
+    "@metamask/swappable-obj-proxy": "^2.1.0",
     "async-mutex": "^0.2.6",
     "babel-runtime": "^6.26.0",
+    "eth-block-tracker": "^7.0.1",
     "eth-method-registry": "1.1.0",
     "eth-query": "^2.1.2",
     "eth-rpc-errors": "^4.0.0",
