--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
+    "@metamask/keyring-controller": "workspace:^",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
