--- a/packages/signature-controller/tsconfig.json
+++ b/packages/signature-controller/tsconfig.json
@@ -15,6 +15,9 @@
     },
     {
       "path": "../message-manager"
+    },
+    {
+      "path": "../keyring-controller"
     }
   ],
   "include": ["../../types", "./src"]
