--- a/packages/signature-controller/tsconfig.build.json
+++ b/packages/signature-controller/tsconfig.build.json
@@ -17,6 +17,9 @@
     },
     {
       "path": "../message-manager/tsconfig.build.json"
+    },
+    {
+      "path": "../keyring-controller/tsconfig.build.json"
     }
   ],
   "include": ["../../types", "./src"]
