Create initial draft of name controller
Create ENS name provider.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
       "path": "./packages/message-manager"
     },
     {
+      "path": "./packages/name-controller"
+    },
+    {
       "path": "./packages/network-controller"
     },
     {
