--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -37,6 +37,9 @@
       "path": "./packages/message-manager/tsconfig.build.json"
     },
     {
+      "path": "./packages/name-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/network-controller/tsconfig.build.json"
     },
     {
