--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -30,9 +30,10 @@
   "dependencies": {
     "@ethereumjs/common": "^3.2.0",
     "@ethereumjs/tx": "^4.2.0",
-    "@metamask/approval-controller": "^3.5.1",
-    "@metamask/base-controller": "^3.2.1",
-    "@metamask/controller-utils": "^4.3.2",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@metamask/approval-controller": "workspace:^",
+    "@metamask/base-controller": "workspace:^",
+    "@metamask/controller-utils": "workspace:^",
     "@metamask/eth-query": "^3.0.1",
     "@metamask/network-controller": "^12.1.2",
     "@metamask/utils": "^6.2.0",
