--- a/packages/ens-controller/package.json
+++ b/packages/ens-controller/package.json
@@ -29,9 +29,9 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.0",
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
-    "@metamask/network-controller": "workspace:^",
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1",
+    "@metamask/network-controller": "^12.1.1",
     "@metamask/utils": "^6.2.0",
     "ethereum-ens-network-map": "^1.0.2",
     "punycode": "^2.1.1"
@@ -47,7 +47,7 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/network-controller": "workspace:^"
+    "@metamask/network-controller": "^12.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
