--- a/packages/gas-fee-controller/package.json
+++ b/packages/gas-fee-controller/package.json
@@ -28,10 +28,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^",
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1",
     "@metamask/eth-query": "^3.0.1",
-    "@metamask/network-controller": "workspace:^",
+    "@metamask/network-controller": "^12.1.1",
     "@metamask/utils": "^6.2.0",
     "@types/uuid": "^8.3.0",
     "ethereumjs-util": "^7.0.10",
@@ -54,7 +54,7 @@
     "typescript": "~4.6.3"
   },
   "peerDependencies": {
-    "@metamask/network-controller": "workspace:^"
+    "@metamask/network-controller": "^12.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
