--- a/packages/preferences-controller/package.json
+++ b/packages/preferences-controller/package.json
@@ -28,8 +28,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:^",
-    "@metamask/controller-utils": "workspace:^"
+    "@metamask/base-controller": "^3.2.0",
+    "@metamask/controller-utils": "^4.3.1"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
