--- a/merged-packages/eth-block-tracker/package.json
+++ b/merged-packages/eth-block-tracker/package.json
@@ -63,7 +63,7 @@
     "typescript": "~4.8.4"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.20 || ^18.16"
   },
   "publishConfig": {
     "access": "public",
