--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,9 @@
 {
   "references": [
     {
+      "path": "./packages/accounts-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/address-book-controller/tsconfig.build.json"
     },
     {
