--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
   },
   "references": [
     {
+      "path": "./packages/accounts-controller"
+    },
+    {
       "path": "./packages/address-book-controller"
     },
     {
