fix: add missing types package

--- a/packages/accounts-controller/tsconfig.json
+++ b/packages/accounts-controller/tsconfig.json
@@ -10,7 +10,9 @@
     {
       "path": "../controller-utils"
     },
-    { "path": "../keyring-controller" }
+    {
+      "path": "../keyring-controller"
+    }
   ],
   "include": ["../../types", "./src"]
 }
