--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -32,7 +32,6 @@
     "@metamask/eth-snap-keyring": "git+https://github.com/MetaMask/eth-snap-keyring.git#commit=543117c98e80c83378dbd8bb2bc87704ee0f96f0",
     "@metamask/keyring-controller": "^7.1.0",
     "@metamask/snaps-controllers": "^1.0.1",
-    "@metamask/snaps-controllers-flask": "npm:@metamask/snaps-controllers@0.38.0-flask.1",
     "@metamask/snaps-utils": "^1.0.1",
     "@metamask/utils": "^6.2.0",
     "eth-rpc-errors": "^4.0.2",
@@ -44,6 +43,7 @@
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^27.4.1",
+    "@types/readable-stream": "^2.3.0",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
     "sinon": "^9.2.4",
