--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -43,6 +43,9 @@
       "path": "./packages/network-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/selected-network-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/notification-controller/tsconfig.build.json"
     },
     {
