--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       "path": "./packages/network-controller"
     },
     {
+      "path": "./packages/selected-network-controller"
+    },
+    {
       "path": "./packages/notification-controller"
     },
     {
