--- a/packages/name-controller/package.json
+++ b/packages/name-controller/package.json
@@ -29,7 +29,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "workspace:^",
+    "@metamask/base-controller": "^3.2.1",
     "immer": "^9.0.6"
   },
   "devDependencies": {
