--- a/packages/assets-controllers/tsconfig.json
+++ b/packages/assets-controllers/tsconfig.json
@@ -10,5 +10,6 @@
     { "path": "../network-controller" },
     { "path": "../preferences-controller" }
   ],
-  "include": ["../../types", "./src"]
+  "include": ["../../types", "./src"],
+  "exclude": ["!**/*.(spec|test).ts?(x)"],
 }
