--- a/packages/controller-utils/package.json
+++ b/packages/controller-utils/package.json
@@ -28,14 +28,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@metamask/base-controller": "^3.2.1",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/network-controller": "^12.1.2",
     "@metamask/utils": "^6.2.0",
     "@spruceid/siwe-parser": "1.1.3",
     "eth-ens-namehash": "^2.0.8",
     "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "ethjs-unit": "^0.1.6",
-    "fast-deep-equal": "^3.1.3"
+    "fast-deep-equal": "^3.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.1.0",
