deps: eth-rpc-errors -> @metamask/rpc-errors
- network-controller
- rate-limit-controller
- signature-controller

--- a/packages/rate-limit-controller/package.json
+++ b/packages/rate-limit-controller/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^3.2.3",
-    "eth-rpc-errors": "^4.0.2",
+    "@metamask/rpc-errors": "^6.0.0",
     "immer": "^9.0.6"
   },
   "devDependencies": {
