--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -33,8 +33,8 @@
     "@metamask/controller-utils": "^5.0.0",
     "@metamask/logging-controller": "^1.0.2",
     "@metamask/message-manager": "^7.3.3",
+    "@metamask/rpc-errors": "^6.0.0",
     "@metamask/utils": "^8.1.0",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
     "lodash": "^4.17.21"
