use @metamask/rpc-errors to standardize errors

--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -35,10 +35,10 @@
     "@metamask/controller-utils": "^4.3.2",
     "@metamask/eth-query": "^3.0.1",
     "@metamask/network-controller": "^12.1.2",
+    "@metamask/rpc-errors": "^5.1.1",
     "@metamask/utils": "^6.2.0",
     "async-mutex": "^0.2.6",
     "eth-method-registry": "1.1.0",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "fast-json-patch": "^3.1.1",
     "lodash": "^4.17.21",
