add data validation and abi dependencies

--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -30,15 +30,17 @@
   "dependencies": {
     "@ethereumjs/common": "^3.2.0",
     "@ethereumjs/tx": "^4.2.0",
+    "@ethersproject/abi": "^5.7.0",
     "@metamask/approval-controller": "^3.5.1",
     "@metamask/base-controller": "^3.2.1",
     "@metamask/controller-utils": "^4.3.2",
     "@metamask/eth-query": "^3.0.1",
+    "@metamask/metamask-eth-abis": "^3.0.0",
     "@metamask/network-controller": "^12.2.0",
+    "@metamask/rpc-errors": "^5.1.1",
     "@metamask/utils": "^6.2.0",
     "async-mutex": "^0.2.6",
     "eth-method-registry": "1.1.0",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "fast-json-patch": "^3.1.1",
     "lodash": "^4.17.21",
