--- a/packages/selected-network-controller/package.json
+++ b/packages/selected-network-controller/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "@metamask/base-controller": "^3.2.3",
     "@metamask/json-rpc-engine": "^7.1.1",
-    "@metamask/network-controller": "^15.0.0"
+    "@metamask/network-controller": "^14.0.0",
+    "@metamask/swappable-obj-proxy": "^2.1.0"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.0",
@@ -43,9 +44,9 @@
     "nock": "^13.3.1",
     "sinon": "^9.2.4",
     "ts-jest": "^27.1.4",
-    "typedoc": "^0.24.8",
-    "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "~4.8.4"
+    "typedoc": "^0.22.15",
+    "typedoc-plugin-missing-exports": "^0.22.6",
+    "typescript": "~4.6.3"
   },
   "peerDependencies": {
     "@metamask/network-controller": "^15.0.0"
