fix: yarn.lock and change eth-rpc-errors to @metamask/rpc-errors

--- a/packages/accounts-controller/package.json
+++ b/packages/accounts-controller/package.json
@@ -31,10 +31,10 @@
     "@metamask/base-controller": "^3.2.1",
     "@metamask/eth-snap-keyring": "^0.3.0",
     "@metamask/keyring-api": "^0.2.7",
+    "@metamask/rpc-errors": "^6.0.0",
     "@metamask/snaps-utils": "^2.0.1",
     "@metamask/utils": "^6.2.0",
     "deepmerge": "^4.2.2",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
     "nanoid": "^3.1.31",
