--- a/merged-packages/eth-json-rpc-provider/tsconfig.build.json
+++ b/merged-packages/eth-json-rpc-provider/tsconfig.build.json
@@ -1,13 +1,10 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.packages.build.json",
   "compilerOptions": {
-    "declaration": true,
-    "inlineSources": true,
-    "noEmit": false,
-    "outDir": "dist",
-    "rootDir": "src",
-    "sourceMap": true
+    "baseUrl": "./",
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["./src/**/*.test.ts"]
+  "references": [],
+  "include": ["../../types", "./src"]
 }
