Add tsconfig reference paths for `eth-json-rpc-provider` in root and downstream packages

--- a/packages/network-controller/tsconfig.build.json
+++ b/packages/network-controller/tsconfig.build.json
@@ -7,7 +7,8 @@
   },
   "references": [
     { "path": "../base-controller/tsconfig.build.json" },
-    { "path": "../controller-utils/tsconfig.build.json" }
+    { "path": "../controller-utils/tsconfig.build.json" },
+    { "path": "../eth-json-rpc-provider/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
