--- a/packages/network-controller/tsconfig.json
+++ b/packages/network-controller/tsconfig.json
@@ -10,6 +10,9 @@
     },
     {
       "path": "../controller-utils"
+    },
+    {
+      "path": "../eth-json-rpc-provider"
     }
   ],
   "include": ["../../types", "../../tests", "./src", "./tests"]
