Changed JSON.stringify to fast-json-stable-stringify

--- a/packages/polling-controller/package.json
+++ b/packages/polling-controller/package.json
@@ -40,6 +40,7 @@
     "@metamask/auto-changelog": "^3.1.0",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
+    "fast-json-stable-stringify": "^2.1.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "typedoc": "^0.24.8",
