deps: Bump `@metamask/{eth-json-rpc-provider,rpc-errors}`  (#1653)
---------

Co-authored-by: Elliot Winkler <elliot.winkler@gmail.com>

--- a/packages/signature-controller/package.json
+++ b/packages/signature-controller/package.json
@@ -34,8 +34,8 @@
     "@metamask/controller-utils": "^5.0.2",
     "@metamask/logging-controller": "^1.0.3",
     "@metamask/message-manager": "^7.3.5",
+    "@metamask/rpc-errors": "^6.1.0",
     "@metamask/utils": "^8.1.0",
-    "eth-rpc-errors": "^4.0.2",
     "ethereumjs-util": "^7.0.10",
     "immer": "^9.0.6",
     "lodash": "^4.17.21"
